# djangoproject

./: README.md  pyproject.toml
mysite/: db.sqlite3
mysite/contacts/: forms.py  urls.py  views.py
mysite/contacts/migrations/: 0001_initial.py
mysite/contacts/templates/contacts/: create.html
mysite/mysite/: admin.py  settings.py  urls.py
mysite/mysite/tests/contacts/: test_form.py  test_views.py
mysite/mysite/tests/polls/: test_models.py
mysite/polls/: models.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options_and_more.py
