[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["tiago valente <tivalente@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "*"


[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
